# kwin-vr

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  INTERACTION_DEV_GUIDE.md  NVIDIA_VR_SETUP.md  PIVOT_WINDOWS_AS_SURFACES.md  PKGBUILD  WORK_SURFACES.md  install.sh  kwin.install
.github/workflows/: ci.yml
autotests/drm/: CMakeLists.txt  mockDrmTest.cpp  mock_drm.cpp
ci/: check-xr-imports.sh  file-salvage-issues.sh  integration-quarantine.txt  run-integration-tests.sh  run-unit-tests.sh  unit-quarantine.txt  xr-import-allowlist.txt
doc/: ARCHITECTURE_PROFILES.md  CORE_PATCHES.md  DESIGN_MULTI_HMD.md  DOCK_AND_STACK_WIP.md  MIGRATION_CUSTODIAN.md  SALVAGE_LEDGER.md  SMOKE.md  TEST_BASELINE.md  VOCABULARY.md
doc/archive/: WORK_SURFACES.md  WORK_SURFACES_OVERHAUL.md
docs/: kwin-vr-workflows.md  orange-pi-5b-install.md
docs/curved_plane/: architecture.md  volumetric_stacker_status.md
docs/work_surfaces/: README.md  design-bisection.md  overview.md  (+12 more)
extras/: CMakeLists.txt  DESIGN-multi-hmd.md  gl_alpha_fix.c  install.sh  sddm-autologin.conf  uninstall.sh
extras/install/: build.sh  common.sh  configure.sh  deploy.sh  deps.sh  detect.sh  uninstall.sh
extras/plasma-workspace/env/: vr-env.sh
extras/systemd/system/: vr-headset-init.service  vr-link-monitor.service  vr-link-monitor.timer
extras/systemd/user/: kwin-vr-custodian.service.in  monado.service  wivrn-watch.service  xreal-mode-watch.service
extras/udev/rules.d/: 70-kwin-vr.rules  70-xreal-air.rules  98-wmr-hololens-config.rules  99-wmr-headset.rules
extras/vr-headset-init/: boot-init.sh  dp-retrain.sh  vr-detect.sh  wivrn-watch.sh  wmr-init.sh  wmr-screen-on.py  xreal-init.sh  xreal-mode-watch.sh  xreal-sbs-switch.py
extras/vr-link-monitor/: vr-link-monitor
extras/vr-profiles.d/: quest3-wivrn.conf  samsung-odyssey-plus.conf  xreal-air-gen1.conf
eye-tracking/: gaze_mouse.py
monado/: 0001-xreal_air-RT-priority-blocking-read-auto-gyro-bias.patch
src/: CMakeLists.txt  compositor.cpp  input.cpp  input.h  internalwindow.cpp  internalwindow.h  kscreenintegration.cpp  options.h  outputconfigurationstore.cpp  outputconfigurationstore.h  pointer_input.cpp  pointer_input.h  useractions.cpp  useractions.h  wayland_server.cpp  wayland_server.h  waylandwindow.cpp  waylandwindow.h  window.cpp  window.h  workspace.cpp  workspace.h  x11window.cpp  xdgshellwindow.cpp  xdgshellwindow.h
src/custodian/: CMakeLists.txt  custodian.cpp  custodian.h  custodianprofile.cpp  custodianprofile.h  hidinit.cpp  hidinit.h  main.cpp  udevmonitor.cpp  udevmonitor.h
src/plugins/vr/: CMakeLists.txt  autoleasepolicy.cpp  autoleasepolicy.h  curvedplanegeometry.cpp  curvedplanegeometry.h  curvedwindowgeometry.cpp  curvedwindowgeometry.h  cylinderbodygeometry.cpp  cylinderbodygeometry.h  decorationgeometry.cpp  decorationgeometry.h  geometrytypes.h  kwinasyncreadback.h  kwincompat.h  kwincurrentcursor.cpp  kwincurrentcursor.h  kwingraphicshelpers.cpp  kwingraphicshelpers.h  kwininternalwindow.cpp  kwininternalwindow.h  kwinshadowitem.cpp  kwinshadowitem.h  kwintoqquick3dinputbridge.cpp  kwintoqquick3dinputbridge.h  kwinvirtualscreenhandle.cpp  kwinvirtualscreenhandle.h  kwinvr.cpp  kwinvr.h  kwinvr.kcfg  kwinvrbridge.cpp  kwinvrbridge.h  kwinvrconfig.kcfgc  kwinvrconfigwrapper.h  kwinvrhelpers.cpp  kwinvrhelpers.h  kwinvrhoveredwindowresolver.cpp  kwinvrhoveredwindowresolver.h  kwinvrinputdevice.cpp  kwinvrinputdevice.h  kwinvrinputfilter.cpp  (+53 more)
src/plugins/vr/autotests/: CMakeLists.txt  flat-float-replay.sh  flat-focus-replay.sh  flat-hud-replay.sh  flat-replay.sh  flat-snap-replay.sh  flatboot-smoke.sh  testautoleasepolicy.cpp  testqmllogic.cpp  testsnaplogic.cpp  testspaceallocator3d.cpp  testvrconfig.cpp  testvrfollowmode.cpp  testvrhelpers.cpp  vrtestlib.sh
src/plugins/vr/autotests/qml/: tst_hudplacement.qml  tst_windowgroup.qml  tst_windowsnaplogic.qml
src/plugins/vr/kcm/: CMakeLists.txt  kwinvr_kcm.json  kwinvrkcm.cpp  kwinvrkcm.h
src/plugins/vr/kcm/ui/: AdvancedSetup.qml  BindingGroup.qml  ButtonKeySequenceItem.qml  ColorPickerButton.qml  FollowModeSetup.qml  GeneralSetup.qml  HeadScrollBindings.qml  HeadScrollSetup.qml  HeadScrollSpeed.qml  HeadgazePreview3D.qml  HeadgazeSetup.qml  InputSetup.qml  KdeKubes.qml  KeysToMouseButtonBindings.qml  LeasableOutputSetup.qml  MonitorFrame.qml  ValueSlider.qml  VirtualDisplaySetup.qml  VolumeKeySetup.qml  VrControllerAnalogBindings.qml  VrControllerBindings.qml  VrControllerSimpleBindings.qml  VrControllerThumbstickScroll.qml  WindowSpacingSetup.qml  main.qml
src/plugins/vr/layoutmodes/: cascademode.cpp  cascademode.h  freemode.cpp  freemode.h  ilayoutmode.h  occlusionawaremode.cpp  occlusionawaremode.h  snaprowmode.cpp  snaprowmode.h  stackmode.cpp  stackmode.h
src/plugins/vr/qml/: CurvedPlane.qml  CurvedWindowContent.qml  FlatScene.qml  HeadScrollBindings.qml  HudPlacementLogic.js  KwinApplicationWindow.qml  KwinDecoratedSurfacedWindow3D.qml  KwinDecorationModel.qml  KwinDecorations3D.qml  KwinInternalWindow3D.qml  KwinPseudoOutputMirror.qml  KwinShadowModel.qml  KwinSurfacedWindow3D.qml  KwinTransientWindow.qml  KwinTransientWindowRecursive.qml  KwinWaylandSubSurface3D.qml  KwinWaylandSubSurface3DRecursive.qml  KwinWaylandSurface3D.qml  KwinWindowThumbnail3D.qml  KwinWindowThumbnailXrItem.qml  Logger.qml  Main.qml  MainFlat.qml  PlaneControlTab.qml  PlaneInteractionManager.qml  PlanePoseSync.qml  PlaneRegistry.qml  RadialMenu.qml  RadialMenuNode.qml  SelectionPrism.qml  TransformGizmo3D.qml  VRWindow.qml  Vr2DViewport.qml  VrBarrierConstraint.qml  VrCursor.qml  VrCursorManager.qml  VrDebugDisplay.qml  VrFocusControl.qml  VrHoverState.qml  VrHudPlane.qml  (+35 more)
src/plugins/vr/shaders/: vignette.frag  vignette.vert  window_texture.frag  window_texture.vert  yuv.frag  yuv.vert
src/plugins/vr/wallpaper-topleft/: metadata.json
src/plugins/vr/wallpaper-topleft/contents/config/: main.xml
src/plugins/vr/wallpaper-topleft/contents/ui/: config.qml  main.qml
src/plugins/vr/xrtest/: CMakeLists.txt  KdeKubes.qml  XrTest.qml  main.cpp  xrtestresult.cpp  xrtestresult.h
(+33 files in other folders)
